--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,8 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="start"
             android:text="@string/app_name"
-            android:textColor="@color/white"
-            android:textSize="22sp" />
+            style="@style/MessageTextStyle" />
 
     </FrameLayout>
     <LinearLayout
