--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -18,7 +18,7 @@
         android:rotation="360"
         android:text="@string/settings"
         android:textColor="@color/black"
-        android:textSize="22sp"
+        android:textSize="@dimen/textSize"
         app:layout_constraintStart_toEndOf="@+id/imageButton"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteY="5dp" />
@@ -39,7 +39,7 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="@dimen/marginSize"
         android:layout_marginTop="61dp"
         android:text="@string/blacktheme"
         style="@style/MessageTextStyleBlack"
@@ -51,8 +51,8 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="42dp"
+        android:layout_marginStart="@dimen/marginSize"
+        android:layout_marginTop="@dimen/marginTop"
         android:text="@string/share"
         style="@style/MessageTextStyleBlack"
         app:layout_constraintStart_toStartOf="parent"
@@ -63,8 +63,8 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="42dp"
+        android:layout_marginStart="@dimen/marginSize"
+        android:layout_marginTop="@dimen/marginTop"
         android:text="@string/support"
         style="@style/MessageTextStyleBlack"
         app:layout_constraintStart_toStartOf="parent"
@@ -75,8 +75,8 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="42dp"
+        android:layout_marginStart="@dimen/marginSize"
+        android:layout_marginTop="@dimen/marginTop"
         android:text="@string/human"
         style="@style/MessageTextStyleBlack"
         app:layout_constraintStart_toStartOf="parent"
@@ -89,7 +89,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="328dp"
         android:layout_marginTop="44dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="@dimen/marginSize"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView4"
         app:layout_constraintStart_toStartOf="@+id/textView4"
@@ -107,7 +107,7 @@
         app:layout_constraintStart_toEndOf="@+id/textView5"
         app:layout_constraintStart_toStartOf="@+id/textView5"
         app:layout_constraintTop_toBottomOf="@+id/imageView2"
-        app:srcCompat="@drawable/support2" />
+        app:srcCompat="@drawable/support2"/>
 
     <ImageView
         android:id="@+id/imageView4"
