--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -8,16 +8,14 @@
         <item name="android:fontFamily">@font/ys_display_medium</item>
     </style>
     <style name="MessageTextStyleSetting">
-        <item name="android:textColor">@color/black_blue</item>
+        <item name="android:textColor">@color/white</item>
         <item name="android:textSize">22sp</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginStart">28dp</item>
-
     </style>
-
     <style name="MessageTextStyleBlack">
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">@color/white</item>
         <item name="android:textSize">16sp</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
@@ -27,7 +25,6 @@
 
     <style name="ButtonStyle" parent="Widget.MaterialComponents.Button">
         <item name="android:textColor">@color/black_blue</item>
-        <item name="android:backgroundTint">@color/white</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:textSize">22sp</item>
         <item name="android:layout_width">match_parent</item>
@@ -36,7 +33,9 @@
         <item name="iconGravity">textStart</item>
         <item name="cornerRadius">15sp</item>
         <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:background">@color/white</item>
 
+        <item name="colorOnSecondary">@color/black</item>
 
     </style>
     <style name="BackGround">
@@ -44,7 +43,7 @@
         <item name="android:layout_height">match_parent</item>
         <item name="android:padding">20dp</item>
         <item name="android:orientation">vertical</item>
-        <item name="android:background">@color/blue</item>
+
     </style>
     <style name="LinearButton">
         <item name="android:layout_width">match_parent</item>
@@ -52,6 +51,7 @@
         <item name="android:layout_marginTop">10dp</item>
         <item name="android:layout_weight">1</item>
         <item name="android:orientation">horizontal</item>
+        <item name="android:background">@color/white</item>
 
     </style>
     <style name="BackGroundSettings">
@@ -59,9 +59,6 @@
         <item name="android:layout_height">match_parent</item>
         <item name="android:padding">20dp</item>
         <item name="android:orientation">vertical</item>
-        <item name="android:background">@color/white</item>
+        <item name="android:background">@color/black_blue</item>
     </style>
-
-
-
 </resources>
