--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -42,12 +42,10 @@
         android:layout_marginTop="64dp"
         android:layout_marginEnd="16dp"
         android:layout_weight="1"
-        android:background="@color/teal_200"
         android:hint="@string/search"
         android:inputType="text"
-        app:cornerRadius="15dp"
+        android:background="@drawable/rounded_edittext"
         android:drawableStart="@drawable/search"
-        app:iconPadding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
