--- a/app/src/main/res/drawable/rounded_edittext.xml
+++ b/app/src/main/res/drawable/rounded_edittext.xml
@@ -2,11 +2,11 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" android:padding="15dp">
 
-    <solid android:color="#FFFFFF" />
+    <solid android:color="@color/teal_200" />
     <corners
         android:bottomRightRadius="15dp"
         android:bottomLeftRadius="15dp"
         android:topLeftRadius="15dp"
         android:topRightRadius="15dp" />
-    <stroke android:width="1dip" android:color="@color/teal_200" />
+    <stroke android:width="1dip" android:color="#f06060"/>
 </shape>
