--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="teal_200">#80CBC4</color>
     <color name="blue">#3772E7</color>
     <color name="black_blue">#1A1B22</color>
+    <color name="green">#008000</color>
+    <color name="red">#ff0000</color>
 </resources>
