--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -34,7 +34,6 @@
         <item name="cornerRadius">15sp</item>
         <item name="android:fontFamily">@font/ys_display_medium</item>
         <item name="android:background">@color/white</item>
-
         <item name="colorOnSecondary">@color/black</item>
 
     </style>
@@ -61,4 +60,25 @@
         <item name="android:orientation">vertical</item>
         <item name="android:background">@color/black_blue</item>
     </style>
+    <style name="ImageButton">
+        <item name="android:layout_width">28dp</item>
+        <item name="android:layout_height">28dp</item>
+    </style>
+
+    <style name="ImageButtonBlackArrow">
+        <item name="android:layout_width">28dp</item>
+        <item name="android:layout_height">28dp</item>
+        <item name="android:layout_marginStart">20dp</item>
+        <item name="android:backgroundTint">@color/black_blue</item>
+        <item name="android:tint">@color/white</item>
+    </style>
+
+    <style name="EditText">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:textColorHint">@color/black</item>
+    </style>
+
+
 </resources>
