--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -10,17 +10,18 @@
         android:id="@+id/textView2"
         style="@style/MessageTextStyleSetting"
         android:layout_marginStart="28dp"
+        android:layout_marginTop="14dp"
         android:rotation="360"
         android:text="@string/settings"
         app:layout_constraintStart_toEndOf="@+id/imageButton"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="5dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
 
     <Switch
         android:id="@+id/switch1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="294dp"
+        android:layout_marginStart="310dp"
         android:layout_marginTop="64dp"
         android:layout_marginEnd="18dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -82,7 +83,7 @@
     <ImageButton
         android:id="@+id/imageButton3"
         style="@style/ImageButton"
-        android:layout_marginStart="326dp"
+        android:layout_marginStart="330dp"
         android:layout_marginTop="41dp"
         android:layout_marginEnd="14dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -128,8 +129,10 @@
     <ImageButton
         android:id="@+id/imageButton5"
         style="@style/ImageButton"
-        android:layout_marginStart="329dp"
+        android:layout_marginStart="332dp"
         android:layout_marginTop="40dp"
+        android:layout_marginEnd="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageButton3"
         app:srcCompat="@drawable/simplearrow" />
@@ -137,9 +140,11 @@
     <ImageButton
         android:id="@+id/imageButton"
         style="@style/ImageButtonBlackArrow"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/backarrow"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="5dp" />
+        tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
