--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -23,18 +23,18 @@
         <item name="layout_constraintStart_toStartOf">parent</item>
     </style>
 
-    <style name="ButtonStyle" parent="Widget.MaterialComponents.Button">
+    <style name="ButtonStyle" parent="Widget.MaterialComponents.Button.UnelevatedButton">
         <item name="android:textColor">@color/black_blue</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:textSize">22sp</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
         <item name="iconPadding">10dp</item>
+        <item name="android:padding">15dp</item>
         <item name="iconGravity">textStart</item>
         <item name="cornerRadius">15sp</item>
         <item name="android:fontFamily">@font/ys_display_medium</item>
-        <item name="android:background">@color/white</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="android:backgroundTint">@color/white</item>
 
     </style>
     <style name="BackGround">
@@ -50,13 +50,13 @@
         <item name="android:layout_marginTop">10dp</item>
         <item name="android:layout_weight">1</item>
         <item name="android:orientation">horizontal</item>
-        <item name="android:background">@color/white</item>
+
 
     </style>
     <style name="BackGroundSettings">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
-        <item name="android:padding">20dp</item>
+        <item name="android:padding">0dp</item>
         <item name="android:orientation">vertical</item>
         <item name="android:background">@color/black_blue</item>
     </style>
@@ -78,6 +78,12 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_weight">1</item>
         <item name="android:textColorHint">@color/black</item>
+        <item name="android:drawablePadding">5dp</item>
+        <item name="android:paddingStart">15dp</item>
+        <item name="android:focusableInTouchMode">true</item>
+        <item name="android:focusable">true</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:maxLength">55</item>
     </style>
 
 
