--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -57,7 +57,7 @@
     <style name="BackGroundSettings">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
-        <item name="android:padding">20dp</item>
+        <item name="android:padding">0dp</item>
         <item name="android:orientation">vertical</item>
         <item name="android:background">@color/white</item>
     </style>
@@ -78,6 +78,12 @@
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_weight">1</item>
+        <item name="android:drawablePadding">5dp</item>
+        <item name="android:paddingStart">15dp</item>
+        <item name="android:focusableInTouchMode">true</item>
+        <item name="android:focusable">true</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:maxLength">55</item>
     </style>
 
 </resources>
