--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -2,149 +2,148 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/linearLayout2"
+    android:id="@+id/layoutSettings"
     style="@style/BackGroundSettings">
 
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textSettings"
         style="@style/MessageTextStyleSetting"
         android:layout_marginStart="28dp"
-        android:layout_marginTop="14dp"
-        android:rotation="360"
+        android:layout_marginTop="@dimen/top"
         android:text="@string/settings"
-        app:layout_constraintStart_toEndOf="@+id/imageButton"
+        app:layout_constraintStart_toEndOf="@+id/buttonArow"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
     <Switch
-        android:id="@+id/switch1"
+        android:id="@+id/switchTheme"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="310dp"
         android:layout_marginTop="64dp"
         android:layout_marginEnd="18dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/textView3"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintStart_toStartOf="@+id/textBlack"
+        app:layout_constraintTop_toBottomOf="@+id/textSettings"
         tools:ignore="UseSwitchCompatOrMaterialXml" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/textBlack"
         style="@style/MessageTextStyleBlack"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="@dimen/margin_size"
         android:layout_marginTop="65dp"
-        android:text="@string/blacktheme"
+        android:text="@string/black_theme"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton"
+        app:layout_constraintTop_toBottomOf="@+id/buttonArow"
         tools:ignore="MissingConstraints" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/textShare"
         style="@style/MessageTextStyleBlack"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="@dimen/margin_size"
         android:layout_marginTop="46dp"
         android:text="@string/share"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/switch1"
+        app:layout_constraintTop_toBottomOf="@+id/switchTheme"
         tools:ignore="MissingConstraints" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/textSupport"
         style="@style/MessageTextStyleBlack"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="@dimen/margin_size"
         android:layout_marginTop="42dp"
         android:text="@string/support"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton2"
+        app:layout_constraintTop_toBottomOf="@+id/buttonShare"
         tools:ignore="MissingConstraints" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/textAgreement"
         style="@style/MessageTextStyleBlack"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="@dimen/margin_size"
         android:layout_marginTop="42dp"
         android:text="@string/human"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton3"
+        app:layout_constraintTop_toBottomOf="@+id/buttonSupport"
         tools:ignore="MissingConstraints" />
 
     <ImageButton
-        android:id="@+id/imageButton2"
+        android:id="@+id/buttonShare"
         style="@style/ImageButton"
         android:layout_marginStart="328dp"
         android:layout_marginTop="44dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="@dimen/margin_size"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/switch1"
+        app:layout_constraintTop_toBottomOf="@+id/switchTheme"
         app:srcCompat="@drawable/share" />
 
     <ImageButton
-        android:id="@+id/imageButton3"
+        android:id="@+id/buttonSupport"
         style="@style/ImageButton"
         android:layout_marginStart="330dp"
         android:layout_marginTop="41dp"
-        android:layout_marginEnd="14dp"
+        android:layout_marginEnd="@dimen/top"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton2"
-        app:srcCompat="@drawable/support2" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonShare"
+        app:srcCompat="@drawable/head"/>
 
     <ImageView
-        android:id="@+id/imageButton4"
+        android:id="@+id/imageSupport"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageButton3"
-        app:layout_constraintEnd_toEndOf="@+id/imageButton3"
-        app:layout_constraintStart_toStartOf="@+id/imageButton3"
-        app:layout_constraintTop_toTopOf="@+id/imageButton3"
+        app:layout_constraintBottom_toBottomOf="@+id/buttonSupport"
+        app:layout_constraintEnd_toEndOf="@+id/buttonSupport"
+        app:layout_constraintStart_toStartOf="@+id/buttonSupport"
+        app:layout_constraintTop_toTopOf="@+id/buttonSupport"
         app:srcCompat="@drawable/support" />
 
     <ImageView
-        android:id="@+id/imageView5"
+        android:id="@+id/imageLeft"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginBottom="5dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageButton3"
-        app:layout_constraintEnd_toEndOf="@+id/imageButton3"
-        app:layout_constraintStart_toStartOf="@+id/imageButton3"
-        app:layout_constraintTop_toTopOf="@+id/imageButton4"
+        android:layout_marginStart="@dimen/layout_marginStart"
+        android:layout_marginBottom="@dimen/layout_marginStart"
+        app:layout_constraintBottom_toBottomOf="@+id/buttonSupport"
+        app:layout_constraintEnd_toEndOf="@+id/buttonSupport"
+        app:layout_constraintStart_toStartOf="@+id/buttonSupport"
+        app:layout_constraintTop_toTopOf="@+id/imageSupport"
         app:srcCompat="@drawable/dot" />
 
     <ImageView
-        android:id="@+id/imageView6"
+        android:id="@+id/imageRight"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="5dp"
-        android:layout_marginBottom="5dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageButton3"
-        app:layout_constraintEnd_toEndOf="@+id/imageButton3"
-        app:layout_constraintStart_toStartOf="@+id/imageButton3"
-        app:layout_constraintTop_toTopOf="@+id/imageButton4"
+        android:layout_marginEnd="@dimen/layout_marginStart"
+        android:layout_marginBottom="@dimen/layout_marginStart"
+        app:layout_constraintBottom_toBottomOf="@+id/buttonSupport"
+        app:layout_constraintEnd_toEndOf="@+id/buttonSupport"
+        app:layout_constraintStart_toStartOf="@+id/buttonSupport"
+        app:layout_constraintTop_toTopOf="@+id/imageSupport"
         app:srcCompat="@drawable/dot" />
 
     <ImageButton
-        android:id="@+id/imageButton5"
+        android:id="@+id/buttonAgreement"
         style="@style/ImageButton"
         android:layout_marginStart="332dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton3"
-        app:srcCompat="@drawable/simplearrow" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonSupport"
+        app:srcCompat="@drawable/simple" />
 
     <ImageButton
-        android:id="@+id/imageButton"
+        android:id="@+id/buttonArow"
         style="@style/ImageButtonBlackArrow"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="@dimen/layout_marginStart"
+        android:layout_marginTop="@dimen/margin_size"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/backarrow"
+        app:srcCompat="@drawable/back"
         tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
