--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -9,10 +9,10 @@
     <TextView
         android:id="@+id/textSettings"
         style="@style/MessageTextStyleSetting"
-        android:layout_marginStart="28dp"
+        android:layout_marginStart="64dp"
         android:layout_marginTop="@dimen/top"
         android:text="@string/settings"
-        app:layout_constraintStart_toEndOf="@+id/buttonArow"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
@@ -32,63 +32,63 @@
         android:id="@+id/textBlack"
         style="@style/MessageTextStyleBlack"
         android:layout_marginStart="@dimen/margin_size"
-        android:layout_marginTop="65dp"
+        android:layout_marginTop="61dp"
         android:text="@string/black_theme"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonArow"
+        app:layout_constraintTop_toBottomOf="@+id/textSettings"
         tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/textShare"
         style="@style/MessageTextStyleBlack"
         android:layout_marginStart="@dimen/margin_size"
-        android:layout_marginTop="46dp"
+        android:layout_marginTop="@dimen/layout_margin"
         android:text="@string/share"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/switchTheme"
+        app:layout_constraintTop_toBottomOf="@+id/textBlack"
         tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/textSupport"
         style="@style/MessageTextStyleBlack"
         android:layout_marginStart="@dimen/margin_size"
-        android:layout_marginTop="42dp"
+        android:layout_marginTop="@dimen/layout_margin"
         android:text="@string/support"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonShare"
+        app:layout_constraintTop_toBottomOf="@+id/textShare"
         tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/textAgreement"
         style="@style/MessageTextStyleBlack"
         android:layout_marginStart="@dimen/margin_size"
-        android:layout_marginTop="42dp"
+        android:layout_marginTop="@dimen/layout_margin"
         android:text="@string/human"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonSupport"
+        app:layout_constraintTop_toBottomOf="@+id/textSupport"
         tools:ignore="MissingConstraints" />
 
     <ImageButton
         android:id="@+id/buttonShare"
         style="@style/ImageButton"
         android:layout_marginStart="328dp"
-        android:layout_marginTop="44dp"
-        android:layout_marginEnd="@dimen/margin_size"
+        android:layout_marginTop="43dp"
+        android:layout_marginEnd="21dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/switchTheme"
+        app:layout_constraintTop_toBottomOf="@+id/textBlack"
         app:srcCompat="@drawable/share" />
 
     <ImageButton
         android:id="@+id/buttonSupport"
         style="@style/ImageButton"
-        android:layout_marginStart="330dp"
-        android:layout_marginTop="41dp"
-        android:layout_marginEnd="@dimen/top"
+        android:layout_marginStart="326dp"
+        android:layout_marginTop="43dp"
+        android:layout_marginEnd="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonShare"
-        app:srcCompat="@drawable/head"/>
+        app:layout_constraintTop_toBottomOf="@+id/textShare"
+        app:srcCompat="@drawable/head" />
 
     <ImageView
         android:id="@+id/imageSupport"
@@ -103,8 +103,7 @@
 
     <ImageView
         android:id="@+id/imageLeft"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/imageEyes"
         android:layout_marginStart="@dimen/layout_marginStart"
         android:layout_marginBottom="@dimen/layout_marginStart"
         app:layout_constraintBottom_toBottomOf="@+id/buttonSupport"
@@ -115,8 +114,7 @@
 
     <ImageView
         android:id="@+id/imageRight"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/imageEyes"
         android:layout_marginEnd="@dimen/layout_marginStart"
         android:layout_marginBottom="@dimen/layout_marginStart"
         app:layout_constraintBottom_toBottomOf="@+id/buttonSupport"
@@ -129,18 +127,16 @@
         android:id="@+id/buttonAgreement"
         style="@style/ImageButton"
         android:layout_marginStart="332dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginTop="45dp"
+        android:layout_marginEnd="23dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonSupport"
+        app:layout_constraintTop_toBottomOf="@+id/textSupport"
         app:srcCompat="@drawable/simple" />
 
     <ImageButton
         android:id="@+id/buttonArow"
         style="@style/ImageButtonBlackArrow"
-        android:layout_marginStart="@dimen/layout_marginStart"
-        android:layout_marginTop="@dimen/margin_size"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/back"
