--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,9 +13,7 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginStart">28dp</item>
-
     </style>
-
     <style name="MessageTextStyleBlack">
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">16sp</item>
@@ -36,8 +34,6 @@
         <item name="iconGravity">textStart</item>
         <item name="cornerRadius">15sp</item>
         <item name="android:fontFamily">@font/ys_display_medium</item>
-
-
     </style>
     <style name="BackGround">
         <item name="android:layout_width">match_parent</item>
@@ -72,6 +68,7 @@
         <item name="android:layout_height">28dp</item>
         <item name="layout_constraintStart_toStartOf">parent</item>
         <item name="android:layout_marginStart">20dp</item>
+        <item name="android:layout_marginTop">20dp</item>
     </style>
 
     <style name="EditText">
@@ -85,5 +82,8 @@
         <item name="android:maxLines">1</item>
         <item name="android:maxLength">55</item>
     </style>
-
+    <style name="imageEyes">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
 </resources>
