--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -23,6 +23,8 @@
         android:layout_marginStart="310dp"
         android:layout_marginTop="64dp"
         android:layout_marginEnd="18dp"
+        android:thumbTint="@color/gray"
+        android:trackTint="@color/gray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/textBlack"
         app:layout_constraintTop_toBottomOf="@+id/textSettings"
@@ -94,6 +96,7 @@
         android:id="@+id/imageSupport"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="3dp"
         android:layout_marginBottom="10dp"
         app:layout_constraintBottom_toBottomOf="@+id/buttonSupport"
         app:layout_constraintEnd_toEndOf="@+id/buttonSupport"
@@ -105,6 +108,7 @@
         android:id="@+id/imageLeft"
         style="@style/imageEyes"
         android:layout_marginStart="@dimen/layout_marginStart"
+        android:layout_marginTop="9dp"
         android:layout_marginBottom="@dimen/layout_marginStart"
         app:layout_constraintBottom_toBottomOf="@+id/buttonSupport"
         app:layout_constraintEnd_toEndOf="@+id/buttonSupport"
@@ -115,6 +119,7 @@
     <ImageView
         android:id="@+id/imageRight"
         style="@style/imageEyes"
+        android:layout_marginTop="9dp"
         android:layout_marginEnd="@dimen/layout_marginStart"
         android:layout_marginBottom="@dimen/layout_marginStart"
         app:layout_constraintBottom_toBottomOf="@+id/buttonSupport"
@@ -137,6 +142,8 @@
     <ImageButton
         android:id="@+id/buttonArow"
         style="@style/ImageButtonBlackArrow"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/back"
