--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -30,7 +30,7 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
         <item name="iconPadding">10dp</item>
-        <item name="android:padding">15dp</item>
+        <item name="android:padding">16dp</item>
         <item name="iconGravity">textStart</item>
         <item name="cornerRadius">15sp</item>
         <item name="android:fontFamily">@font/ys_display_medium</item>
@@ -59,13 +59,13 @@
         <item name="android:background">@color/black_blue</item>
     </style>
     <style name="ImageButton">
-        <item name="android:layout_width">28dp</item>
-        <item name="android:layout_height">28dp</item>
+        <item name="android:layout_width">16dp</item>
+        <item name="android:layout_height">16dp</item>
     </style>
 
     <style name="ImageButtonBlackArrow">
-        <item name="android:layout_width">28dp</item>
-        <item name="android:layout_height">28dp</item>
+        <item name="android:layout_width">16dp</item>
+        <item name="android:layout_height">16dp</item>
         <item name="android:backgroundTint">@color/black_blue</item>
         <item name="android:tint">@color/white</item>
         <item name="android:layout_marginStart">20dp</item>
@@ -75,8 +75,8 @@
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_weight">1</item>
-        <item name="android:textColorHint">@color/black</item>
-        <item name="android:drawablePadding">5dp</item>
+        <item name="android:textColorHint">@color/gray</item>
+        <item name="android:drawablePadding">9dp</item>
         <item name="android:paddingStart">15dp</item>
         <item name="android:focusableInTouchMode">true</item>
         <item name="android:focusable">true</item>
