--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,9 @@
     <color name="purple_200">#CE93D8</color>
     <color name="purple_700">#7B1FA2</color>
     <color name="teal_200">#80CBC4</color>
+    <color name="teal_400">#E6E8EB</color>
+    <color name="gray">#AEAFB4</color>
+    <color name="light">#E6E8EB</color>
     <color name="blue">#3772E7</color>
     <color name="black_blue">#1A1B22</color>
     <color name="green">#008000</color>
