--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -9,7 +9,7 @@
     <TextView
         android:id="@+id/textSettings"
         style="@style/MessageTextStyleSetting"
-        android:layout_marginStart="64dp"
+        android:layout_marginStart="@dimen/margin"
         android:layout_marginTop="@dimen/top"
         android:text="@string/settings"
         app:layout_constraintStart_toStartOf="parent"
@@ -18,13 +18,7 @@
 
     <Switch
         android:id="@+id/switchTheme"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="310dp"
-        android:layout_marginTop="64dp"
-        android:layout_marginEnd="18dp"
-        android:thumbTint="@color/gray"
-        android:trackTint="@color/gray"
+        style="@style/switchTheme"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/textBlack"
         app:layout_constraintTop_toBottomOf="@+id/textSettings"
@@ -74,7 +68,7 @@
         android:id="@+id/buttonShare"
         style="@style/ImageButton"
         android:layout_marginStart="328dp"
-        android:layout_marginTop="43dp"
+        android:layout_marginTop="@dimen/margin_two"
         android:layout_marginEnd="21dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -85,7 +79,7 @@
         android:id="@+id/buttonSupport"
         style="@style/ImageButton"
         android:layout_marginStart="326dp"
-        android:layout_marginTop="43dp"
+        android:layout_marginTop="@dimen/margin_two"
         android:layout_marginEnd="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -134,6 +128,7 @@
         android:layout_marginStart="332dp"
         android:layout_marginTop="45dp"
         android:layout_marginEnd="23dp"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textSupport"
@@ -142,8 +137,6 @@
     <ImageButton
         android:id="@+id/buttonArow"
         style="@style/ImageButtonBlackArrow"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/back"
